test/runnable/extra-files/test18868_b.d
import imports.test18868_fls;
alias floop = FLS!(int);
void main() {}
